--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_deploy:
 deploy:
   provider: script
   skip_cleanup: true
-  script: chmod 600 id_rsa && ssh docker@52.187.120.141 '/usr/local/bin/docker-compose
+  script: chmod 600 deploy_rsa && ssh docker@52.187.120.141 '/usr/local/bin/docker-compose
     down && /usr/local/bin/docker-compose pull && /usr/local/bin/docker-compose up
     -d'
   on:
